--- a/src/main/resources/templates/private/CostumerDashboard.html
+++ b/src/main/resources/templates/private/CostumerDashboard.html
@@ -40,9 +40,11 @@
             </div>
         </div>
     </header>
+    
+    <span id="openSidebar" class="openSidebar" style="cursor: pointer;" onclick="openSidebar()">&#9776;</span>
 
-
-    <div class="sidebar">
+    <div id="sidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closeSidebar" onclick="closeSidebar()">&times;</a>
         <div class="logo-details">
             <span class="logo_name">BIENVENIDO</span>
         </div>
@@ -72,6 +74,23 @@
                 </a>
             </li>
         </ul>
+        <!-- <ul>
+            <li>
+                <a href="">Dashboard</a>
+            </li>
+            <li>
+                <a href="">Dashboard</a>
+            </li>
+            <li>
+                <a href="">Dashboard</a>
+            </li>
+            <li>
+                <a href="">Dashboard</a>
+            </li>
+            <li>
+                <a href="">Dashboard</a>
+            </li>
+        </ul> -->
     </div>
 
 
