--- a/src/main/resources/templates/private/CostumerMyAccount.html
+++ b/src/main/resources/templates/private/CostumerMyAccount.html
@@ -40,12 +40,15 @@
             </div>
         </div>
     </header>
+    
+    <span id="openSidebar" class="openSidebar" style="cursor: pointer;" onclick="openSidebar()">&#9776;</span>
 
-    <div class="sidebar">
+    <div id="sidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closeSidebar" onclick="closeSidebar()">&times;</a>
         <div class="logo-details">
             <span class="logo_name">BIENVENIDO</span>
         </div>
-        <ul class="nav-links">
+        <ul id="navlinks" class="nav-links">
             <li>
                 <a th:href="@{Dashboard}">
                     <i class='bx bx-money'></i>
