--- a/src/main/resources/templates/private/MyReservations.html
+++ b/src/main/resources/templates/private/MyReservations.html
@@ -98,7 +98,21 @@
             MisReservas();
         })
     </script>
-    <div class="listar-Reserva" id="listadoReserva"></div>
-</body>
+    <div class="col-lg-12 wrapper" style="margin-top: 100px;">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="content-reserva">
+                    <div class="listar-Reserva" id="listadoReserva"></div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="imagen-reservations">
+                    <img class="img-reservations" th:src="@{/img/img-reservations.svg}" alt="google-image">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    </body>
 
 </html>
