--- a/src/main/resources/templates/private/CostumerDashboard.html
+++ b/src/main/resources/templates/private/CostumerDashboard.html
@@ -40,8 +40,9 @@
             </div>
         </div>
     </header>
-    
+
     <span id="openSidebar" class="openSidebar" style="cursor: pointer;" onclick="openSidebar()">&#9776;</span>
+    <span class="openSidebar-content"></span>
 
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="closeSidebar" onclick="closeSidebar()">&times;</a>
