--- a/src/main/resources/static/css/styleRegister.css
+++ b/src/main/resources/static/css/styleRegister.css
@@ -8,7 +8,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
 }
 
 
