--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
     <section>
         <div class="main-text">
             <div class="col-lg-12">
-                <div class="row" style="height: 550px">
+                <div class="row">
                     <div class="col-lg-6">
                         <h1> BIENVENIDO A LINGSTAR</h1>
                         <p>Lingstar es una pequeña plataforma de reserva habitacional para agendamiento hotelero, 
@@ -52,7 +52,7 @@
                         </p>
                         <a class="login-content" th:href="@{/auth/login}">Reservar ahora!</a>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 asd">
                         <div class="asd">
                             <img class="qwe-img" th:src="@{/img/backshapeee.png}">
                             <img class="ewq-img" th:src="@{/img/lapim.png}">
@@ -103,7 +103,7 @@
                 </ul>
             </div>
             <div class="footer-bottom">
-                <p> LingStar &copy; <script>document.write(new Date().getFullYear());</script> Diseñado por <span> Juan Sebastian Bustos Marroquin</span></p>
+                <p> LingStar<a>®</a> <script>document.write(new Date().getFullYear());</script> Desarrollado por: <span> Juan Sebastian Bustos Marroquin</span></p>
             </div>
         </footer>
     </section>
