--- a/src/main/resources/templates/private/MyReservations.html
+++ b/src/main/resources/templates/private/MyReservations.html
@@ -42,6 +42,7 @@
     </header>
     
     <span id="openSidebar" class="openSidebar" style="cursor: pointer;" onclick="openSidebar()">&#9776;</span>
+    <span class="openSidebar-content"></span>
 
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="closeSidebar" onclick="closeSidebar()">&times;</a>
